GNOME Bugzilla – Bug 697682
Cannot rearrange certain items in desktop.
Last modified: 2013-04-10 21:53:08 UTC
Steps to produce: 1. Let nautilus handle desktop set by gnome-tweak-tool 2. Try to rearrange home or trash or optical drive Home directory cannot be moved due to the error: "You cannot copy a folder into itself." Trash cannot be moved, not sure how to explain issue, try it out? Cannot move optical drive, creates new directory. Using Fedora 19 64-Bit.
Pushed a fix for this to git.