canvas-dnd: don't use activation URI for DnD of special desktop items

Or moving icons on the desktop itself will break.

https://bugzilla.gnome.org/show_bug.cgi?id=697682